# GLauncher

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
assets/ui/: style.css
packaging/: io.github.Dacraezy1.GLauncher.desktop
src/: main.rs
src/auth/: accounts.rs  microsoft.rs  mod.rs
src/java/: mod.rs
src/minecraft/: instances.rs  launcher.rs  loaders.rs  metadata.rs  mod.rs  versions.rs
src/mods/: curseforge.rs  installed.rs  mod.rs  modrinth.rs
src/ui/: mod.rs  state.rs  window.rs
src/ui/components/: mod.rs
src/ui/dialogs/: instance_settings.rs  launch.rs  microsoft_login.rs  mod.rs  new_instance.rs
src/ui/pages/: accounts.rs  home.rs  instances.rs  java.rs  mod.rs  mods.rs  settings.rs
src/utils/: config.rs  download.rs  mod.rs  paths.rs
