[package]
name = "glauncher"
version = "1.0.0"
edition = "2021"
authors = ["GLauncher Contributors"]
description = "A modern, fast, native Minecraft Java Edition launcher for Linux"
license = "GPL-3.0"
repository = "https://github.com/Dacraezy1/GLauncher"

[[bin]]
name = "glauncher"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
gio = "0.20"
gdk4 = "0.9"
gdk-pixbuf = "0.20"
pango = "0.20"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth / crypto
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"
urlencoding = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# File system
dirs = "5"
walkdir = "2"
zip = "2"
flate2 = "1"
tar = "0.4"

# Misc
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
futures = "0.3"
bytes = "1"
open = "5"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
